2011-02-15 Bernard Baeyens (berbae)

	* 1.0-1 :
	First release of the udisksvm script
	with the associated default.xml configuration file for traydevice.
2011-03-28
	* 1.0-2 :
	Change the source origins to github repository
	Change architecture to "any"
2011-05-08
        * 1.1-0 :
	Change default mount options : flush instead of sync for vfat file
	system, and added nodev for all mount commands
2011-05-15
        * 1.2-0 :
	New traydevice configuration file name: udisksvm.xml
	traydevice now uses the -c option for the configuration file
	tooltip is now the Label name if available and Uuid if not
2011-10-22
        * 1.3-0 :
	Don't use 'eval' anymore to populate the variables
	from 'udisks--show-infos'
2011-10-25
        * 1.4-0 :
	Missing '-c $TRAYCONF' in the pgrep test for optical disks
	Using (exec traydevice ...) & to launch traydevice
	Using 'udisks --eject' instead of '/usr/bin/eject' in udisksvm.xml
2012-01-26
        * 1.5-0 :
	Rollback of the change to launch traydevice with exec
	Remove automount for optical disks
	The mounting/unmounting for them is still under traydevice control
	as is the ejection of unmounted optical disks
2012-05-13
        * 1.6-1 :
	Don't give eject choice for mounted optical disks
	they must be unmounted before ejection is possible)
	Blank optical disks are now under traydevice control for ejection
	or mounting after burning an iso file
	but the label will not be seen until ejection/insertion of the disk)
2012-05-21
        * 1.7-1 :
	Added ntfs filesystem type