@@ -1,8 +1,8 @@
 # Maintainer: Lukas Sabota <LTsmooth42 _at_ gmail _dot_ com>
 
 pkgname=fceux-svn
-pkgver=2516
-pkgrel=1
+pkgver=2517
+pkgrel=2
 pkgdesc="Fast and ultra-compatible NES/Famicom emulator with SDL, OpenGL and SVGALIB support"
 arch=('i686' 'x86_64')
 url="http://fceux.com/"
@@ -21,7 +21,7 @@ noextract=()
 md5sums=('30baf915c936926fa50f59d8276f6575'
 	 '3fe753731ac46b5fee528b1f73abd3e3')
 
-_svntrunk=http://svn.code.sf.net/p/fceultra/code/fceu
+_svntrunk=https://fceultra.svn.sourceforge.net/svnroot/fceultra/fceu
 _svnmod=fceu
 
 build() {
