@@ -34,7 +34,7 @@ true && pkgname=(linux-ck linux-ck-headers)
 _kernelname=-ck
 _basekernel=3.4
 pkgver=${_basekernel}.1
-pkgrel=1
+pkgrel=2
 arch=('i686' 'x86_64')
 url="https://wiki.archlinux.org/index.php/Linux-ck"
 license=('GPL2')
@@ -56,8 +56,8 @@ sha256sums=('ff3dee6a855873d12487a6f4070ec2f7996d073019171361c955639664baa0c6'
             '19baea7c576da53c5d0eae7462968ce180a5e7548d52683fe6fd2249adbe19ad'
             '9a8a0f151d3a34cb74f784696dd5409e0416bcc6fa27e94eb3e500d9e57db8ad'
             'c2cf8cc2600502de348f3dc3aae9a3bde5486759db15cb8a93df7aa35bd6e7da'
-            'eb0f89250909504e01616ad0f525d9d83461aa6deeddddb26d4439c3d745bd44'
-            'bc2aeff9c14bfd29bfcb2d705f1f7fa221ae5302cea3ed563d639a86a7ef5d7f'
+            'bedc10aced624e61e75651d4c2f5270990a7a4625ae8eb0be48dbb1d55c4a7c9'
+            'db1ee30cd330a9163959c7264e40417ae0f53ad922a3fcbf9b5060e4a50f6b2c'
             'b9d79ca33b0b51ff4f6976b7cd6dbb0b624ebf4fbf440222217f8ffc50445de4'
             '9ccadbe3eb30bb283af3eb869c3a4bdb764628854811cc616a2e02e9ef398705'
             'f77e1a1f2d955f0499dc2957d1d65a3eb931212a13948b33916332296d0e4a7a'
