@@ -1,5 +1,5 @@
 KERNEL_NAME=-ck
-KERNEL_VERSION=3.4.1-1-ck
+KERNEL_VERSION=3.4.1-2-ck
 
 post_install () {
 	# updating module dependencies
