@@ -1,0 +1,24 @@
+# Maintainer: Simon Legner <Simon.Legner@gmail.com>
+pkgname=ttt2
+pkgver=1.08
+pkgrel=1
+pkgdesc="An automatic termination prover for term rewrite systems (TRS)"
+arch=('i686' 'x86_64')
+url="http://colo6-c703.uibk.ac.at/ttt2/"
+license=('LGPL')
+depends=('libxslt')
+makedepends=('camlidl' 'ocaml')
+source=(http://colo6-c703.uibk.ac.at/ttt2/download/$pkgname-$pkgver.tar.gz)
+
+build() {
+  cd "$srcdir/$pkgname"
+  make
+}
+
+package() {
+  cd "$srcdir/$pkgname"
+  install -D ttt2 $pkgdir/usr/bin/ttt2
+}
+
+# vim:set ts=2 sw=2 et:
+md5sums=('a9595bb8039913971e4194a973ed6df4')
