@@ -7,30 +7,30 @@
 
 # Maintainer: Bernard Baeyens (berbae)
 pkgname=udisksvm
-pkgver=1.7
+pkgver=1.8
 pkgrel=1
 pkgdesc="GUI oriented automounting script for removable media"
 arch=("any")
 url="https://bbs.archlinux.org/viewtopic.php?id=112397"
 license=("GPL")
-depends=("bash>=4.0" "udisks" "traydevice")
+depends=("traydevice")
 optdepends=('ntfs-3g: for mounting ntfs disk with write option')
 install=udisksvm.install
 backup=("usr/share/udisksvm/$pkgname.xml")
 changelog=ChangeLog
 source=("https://github.com/berbae/udisksvm/raw/master/README"
         "https://github.com/berbae/udisksvm/raw/master/$pkgname-$pkgver.xml"
-        "https://github.com/berbae/udisksvm/raw/master/$pkgname-$pkgver.sh")
+        "https://github.com/berbae/udisksvm/raw/master/$pkgname-$pkgver.py")
 
 sha1sums=("104dce77a5b29716b786f00c33ad07475fece9c9"
           "4fc49241c5064e1ab5fdc47e5f26dbd424606a98"
-          "64e74233344f7b80fa5bc504038651440df00ae6")
+          "2226ace684f0a137a2f0a56d2a6974f74b089ede")
 
 package() {
   cd $srcdir
   install -D -m 644 README ${pkgdir}/usr/share/udisksvm/README
   install -D -m 666 $pkgname-$pkgver.xml ${pkgdir}/usr/share/udisksvm/$pkgname.xml
-  install -D $pkgname-$pkgver.sh ${pkgdir}/usr/bin/udisksvm
+  install -D $pkgname-$pkgver.py ${pkgdir}/usr/bin/udisksvm
 }
 
 # vim:set ts=2 sw=2 et:
