@@ -41,3 +41,8 @@
 2012-05-21
         * 1.7-1 :
 	Added ntfs filesystem type
+2012-06-05
+        * 1.8-1 :
+	Rewriting of the script in Python2
+	It now uses the dbus interface to UDisks, instead of the 'udisks'
+	command (but the 'udisks' command is still used by traydevice)
